Preventing overflow

--- a/MY BUILDS/BALANCE SHEET-Pseudo selectors/styles.css
+++ b/MY BUILDS/BALANCE SHEET-Pseudo selectors/styles.css
@@ -11,6 +11,9 @@ html {
     clip-path: inset(50%);
     width: 1px;
     height: 1px;
+    overflow: hidden;
+    white-space: nowrap;
   }
+  
   
       
